# evidencechain

./: .gitignore  AGENTS.md  LICENSE  README.md  install.sh  pyproject.toml
src/evidencechain/: __init__.py  __main__.py  config.py  enums.py  forensic_semantics.py  models.py  server.py
src/evidencechain/correction/: __init__.py  confidence.py  detectors.py  engine.py
src/evidencechain/knowledge/: __init__.py  forensic_kb.py
src/evidencechain/provenance/: __init__.py  audit_logger.py  evidence_registry.py  evidence_store.py
src/evidencechain/report/: __init__.py  builder.py  generator.py
src/evidencechain/report/templates/: report.json.j2  report.md.j2
src/evidencechain/security/: __init__.py  command_guard.py  output_cap.py  path_validator.py
src/evidencechain/threat_intel/: __init__.py  aggregator.py  rate_limiter.py
src/evidencechain/threat_intel/sources/: __init__.py  abuseipdb.py  alienvault_otx.py  base.py  lolbas.py  malwarebazaar.py  virustotal.py
src/evidencechain/tools/: __init__.py  base.py  disk.py  enrichment.py  memory.py
src/evidencechain/validators/: __init__.py  amcache.py  base.py  evtx.py  memory.py  mft.py  prefetch.py  registry.py  shimcache.py  timestamps.py
tests/: test_block2_smoke.py  test_block3_smoke.py  test_block4_smoke.py  test_block5_smoke.py  test_block6_smoke.py  test_block7_integration.py
